# AresOS

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: DEVICES.md  EXECUTABLE_IMAGES.md  FRAME_BACKED_IMAGES.md  FRAME_OWNERSHIP.md  PROGRAMS.md  RING3_TRAMPOLINE.md  SCHEDULER.md  SECURITY.md  STORAGE.md  USER_CONTEXT.md  USER_ELF_MVP.md  USER_PAGE_TABLES.md  USER_SYSCALLS.md  context-lab.md  phase-1-checklist.md  phase-10-checklist.md  phase-11-checklist.md  phase-13-checklist.md  phase-14-checklist.md  phase-15-checklist.md  phase-16-checklist.md  phase-17-checklist.md  phase-18-checklist.md  phase-19-checklist.md  phase-2-checklist.md  phase-20-checklist.md  phase-25-checklist.md  phase-26-checklist.md  phase-27-checklist.md  phase-29-checklist.md  phase-3-checklist.md  phase-30-checklist.md  phase-31-checklist.md  phase-32-checklist.md  phase-33-checklist.md  phase-34-checklist.md  phase-35-checklist.md  phase-36-checklist.md  (+11 more)
kernel/: Cargo.toml
kernel/src/: address_space.rs  allocator.rs  elf_reloc.rs  frame_ownership.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  mapping_stub.rs  memory.rs  serial.rs  storage.rs  syscall.rs  user_context.rs  user_copy.rs  user_memory.rs  user_paging.rs  user_syscall.rs  user_syscall_hw.rs  vga_buffer.rs
kernel/src/performance/: metrics.rs  mod.rs  process_metrics.rs  profiler.rs
kernel/src/task/: context.rs  executor.rs  keyboard.rs  mod.rs  process.rs  program_loader.rs  scheduler.rs  timer.rs  userspace.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  preemption_integration.rs  stack_overflow.rs
(+45 files in other folders)
