[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false

[lib]
name = "kernel"
path = "src/lib.rs"
doctest = false

[features]
default = []
# Production preemptive scheduling (Phase 5+)
preemption = []
# Deprecated experimental flags (kept for backward compatibility; use `preemption` instead)
live-context-switch = []
context-lab = ["live-context-switch"]
irq-exit-preempt-experimental = ["context-lab"]
irq-exit-wrapper-experimental = ["irq-exit-preempt-experimental"]

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.14"
uart_16550 = "0.2"
spin = "0.9"
pic8259 = "0.10"
pc-keyboard = "0.5"
linked_list_allocator = "0.10"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
volatile = "0.2"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.4", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }

[package.metadata.bootimage]
test-args = [
	"-device",
	"isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial",
	"stdio",
	"-display",
	"none",
]
test-success-exit-code = 33
test-timeout = 300
